--- a/index.html
+++ b/index.html
@@ -1,14 +1,177 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body {
-color: white;
-background-color: black;
-}
-</style>
-</head>
-<body>
-<div style="text-align: center;"><img src="ouch.png"></div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>시누의 싸이버스페이스</title>
+        <style>
+            @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');            
+            html {
+                margin: 0;
+                padding: 0;
+                height: 100%;
+            }
+            body {
+                margin: 0;
+                padding: 0;
+                height: 100%;
+                overflow: hidden;
+                background: rgba(58, 110, 164, 1);
+                user-select: none;
+                font-family: "굴림", sans-serif;
+                font-size: 12px;
+            }
+            .window {
+                position: absolute;
+                display: flex;
+                left: calc(50% - 152px);
+                top: calc(50% - 72px);
+                border-top: 1px solid rgb(212, 208, 200);
+                border-left: 1px solid rgb(212, 208, 200);
+                border-bottom: 1px solid rgb(64, 64, 64);
+                border-right: 1px solid rgb(64, 64, 64);
+                min-width: 302px;
+                min-height: 143px;
+                background: rgb(212, 208, 200);
+                box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            }
+            .window-border {
+                width: 100%;
+                overflow: auto;
+                border-top: 1px solid white;
+                border-left: 1px solid white;
+                border-bottom: 1px solid rgb(128, 128, 128);
+                border-right: 1px solid rgb(128, 128, 128);
+            }
+            .window-title {
+                width: 100%;
+                height: 18px;
+                font-weight: bold;
+                color: white;
+                line-height: 20px;
+                text-align: left;
+                background: linear-gradient(90deg,rgba(12, 38, 107, 1) 0%, rgba(166, 202, 240, 1) 100%);
+            }
+            .window-title-icon {
+                position:absolute;
+                top: 1px;
+                left: 3px;
+                display: inline-block;
+            }
+            .window-title-text {
+                position:absolute;
+                top: 4px;
+                left: 20px;
+                display: inline-block;
+                vertical-align: middle;
+                line-height: normal;
+                margin-left: 2px;
+            }
+            .window-content {
+                margin: 2px;
+            }
+            .button {
+                border-top: 1px solid rgb(212, 208, 200);
+                border-left: 1px solid rgb(212, 208, 200);
+                border-bottom: 1px solid rgb(64, 64, 64);
+                border-right: 1px solid rgb(64, 64, 64);
+            }
+            .button-border {
+                padding: 8px;
+                border-top: 1px solid white;
+                border-left: 1px solid white;
+                border-bottom: 1px solid rgb(128, 128, 128);
+                border-right: 1px solid rgb(128, 128, 128);
+            }
+            .button:active {
+                border-bottom: 1px solid rgb(212, 208, 200);
+                border-right: 1px solid rgb(212, 208, 200);
+                border-top: 1px solid rgb(64, 64, 64);
+                border-left: 1px solid rgb(64, 64, 64);
+            }
+            .button-border:active {
+                padding: 8px;
+                border-bottom: 1px solid white;
+                border-right: 1px solid white;
+                border-top: 1px solid rgb(128, 128, 128);
+                border-left: 1px solid rgb(128, 128, 128);
+            }
+            .label {
+                padding: 4px;
+            }
+            .vspacer {
+                height: 4px;
+            }
+            a {
+                text-decoration: none;
+                color: black;
+                cursor: default;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="window" id="window-test">
+            <div class="window-border">
+                <div class="window-title" id="window-title-test">
+                    <span class="window-title-icon"><img src="vb.png" draggable="false"></span><span class="window-title-text"><img src="text-title.png" draggable="false"></span>
+                </div>
+                <div class="window-content">
+                    <div class="label"><img src="text-body.png" draggable="false"></div>
+                    <a href="/blog/">
+                        <div class="button">
+                            <div class="button-border">
+                                <img src="text-button-blog.png" draggable="false">
+                            </div>
+                        </div>
+                    </a>
+                    <a href="/sinutools/">
+                    <div class="vspacer"></div>
+                        <div class="button">
+                            <div class="button-border">
+                                <img src="text-button-sinutools.png" draggable="false">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <script>
+            dragElement(document.getElementById("window-test"), document.getElementById("window-title-test"))
+
+            function dragElement(body, head) {
+                var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+                head.onmousedown = dragMouseDown;
+
+                function dragMouseDown(e) {
+                    e = e || window.event;
+                    e.preventDefault();
+                    // get the mouse cursor position at startup:
+                    pos3 = e.clientX;
+                    pos4 = e.clientY;
+                    document.onmouseup = closeDragElement;
+                    // call a function whenever the cursor moves:
+                    document.onmousemove = elementDrag;
+                }
+
+                function elementDrag(e) {
+                    e = e || window.event;
+                    e.preventDefault();
+                    // calculate the new cursor position:
+                    pos1 = pos3 - e.clientX;
+                    pos2 = pos4 - e.clientY;
+                    pos3 = e.clientX;
+                    pos4 = e.clientY;
+                    // set the element's new position:
+                    body.style.top = (body.offsetTop - pos2) + "px";
+                    body.style.left = (body.offsetLeft - pos1) + "px";
+                }
+
+                function closeDragElement() {
+                    // stop moving when mouse button is released:
+                    document.onmouseup = null;
+                    document.onmousemove = null;
+                }
+            }
+        </script>
+    </body>
 </html>
