--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 font-family: "굴림", sans-serif;
                 font-size: 12px;
             }
+            img {
+                image-rendering: pixelated;
+            }
             .window {
                 position: absolute;
                 display: flex;
