Make texts double resolution and downscale

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             }
             .window-title-text {
                 position:absolute;
-                top: 4px;
+                top: 3px;
                 left: 20px;
                 display: inline-block;
                 vertical-align: middle;
@@ -116,14 +116,14 @@
         <div class="window" id="window-test">
             <div class="window-border">
                 <div class="window-title" id="window-title-test">
-                    <span class="window-title-icon"><img src="vb.png" draggable="false"></span><span class="window-title-text"><img src="text-title.png" draggable="false"></span>
+                    <span class="window-title-icon"><img src="vb.png" draggable="false"></span><span class="window-title-text"><img src="text-title.png" style="width: 135px; height: 13px;" draggable="false"></span>
                 </div>
                 <div class="window-content">
-                    <div class="label"><img src="text-body.png" draggable="false"></div>
+                    <div class="label"><img src="text-body.png" style="width: 239px; height: 34px;" draggable="false"></div>
                     <a href="/blog/">
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-blog.png" draggable="false">
+                                <img src="text-button-blog.png" style="width: 76px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
@@ -131,7 +131,7 @@
                     <div class="vspacer"></div>
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-sinutools.png" draggable="false">
+                                <img src="text-button-sinutools.png" style="width: 128px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
