--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" href="favicon.png" type="image/png"/>
+		<link rel="icon" href="favicon.ico" />
         <title>시누의 싸이버스페이스</title>
         <style>
             @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');            
