--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" href="favicon.png" type="image/png"/>
-		<link rel="icon" href="favicon.ico" />
+		<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon"/>
         <title>시누의 싸이버스페이스</title>
         <style>
             @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');            
