Make buttons non-draggable

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                 </div>
                 <div class="window-content">
                     <div class="label"><img src="text-body.png" style="width: 239px; height: 34px;" draggable="false"></div>
-                    <a href="/blog/">
+                    <a href="/blog/" draggable="false">
                         <div class="button">
                             <div class="button-border">
                                 <img src="text-button-blog.png" style="width: 76px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
-                    <a href="/sinutools/">
+                    <a href="/sinutools/" draggable="false">
                     <div class="vspacer"></div>
                         <div class="button">
                             <div class="button-border">
