Use pointer events instead of mouse events

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
             function dragElement(body, head) {
                 var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-                head.onmousedown = dragMouseDown;
+                head.onpointerdown = dragMouseDown;
 
                 function dragMouseDown(e) {
                     e = e || window.event;
@@ -153,9 +153,9 @@
                     // get the mouse cursor position at startup:
                     pos3 = e.clientX;
                     pos4 = e.clientY;
-                    document.onmouseup = closeDragElement;
+                    document.onpointerup = closeDragElement;
                     // call a function whenever the cursor moves:
-                    document.onmousemove = elementDrag;
+                    document.onpointermove = elementDrag;
                 }
 
                 function elementDrag(e) {
@@ -173,8 +173,8 @@
 
                 function closeDragElement() {
                     // stop moving when mouse button is released:
-                    document.onmouseup = null;
-                    document.onmousemove = null;
+                    document.onpointerup = null;
+                    document.onpointermove = null;
                 }
             }
         </script>
