--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
                 border-left: 1px solid white;
                 border-bottom: 1px solid rgb(128, 128, 128);
                 border-right: 1px solid rgb(128, 128, 128);
+				padding: 1px;
             }
             .window-title {
                 width: 100%;
                 height: 18px;
                 font-weight: bold;
                 color: white;
-                line-height: 20px;
                 text-align: left;
                 background: linear-gradient(90deg,rgba(10, 36, 106, 1) 0%, rgba(166, 202, 240, 1) 100%);
             }
             .window-title-icon {
                 position:absolute;
-                top: 1px;
-                left: 3px;
+                top: 2px;
+                left: 4px;
                 display: inline-block;
             }
             .window-title-text {
                 position:absolute;
-                top: 3px;
-                left: 20px;
+                top: 4px;
+                left: 21px;
                 display: inline-block;
                 vertical-align: middle;
                 line-height: normal;
