Move button text on active

--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@
                 border-left: 1px solid rgb(64, 64, 64);
             }
             .button-border:active {
-                padding: 8px;
                 border-bottom: 1px solid white;
                 border-right: 1px solid white;
                 border-top: 1px solid rgb(128, 128, 128);
                 border-left: 1px solid rgb(128, 128, 128);
+                padding-top: 9px;
+                padding-left: 9px;
+                padding-bottom: 7px;
+                padding-right: 7px;
             }
             .label {
                 padding: 4px;
