Add alt text on text images

--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
         <div class="window" id="window-test">
             <div class="window-border">
                 <div class="window-title" id="window-title-test">
-                    <span class="window-title-icon"><img src="vb.png" draggable="false"></span><span class="window-title-text"><img src="text-title.png" style="width: 135px; height: 13px;" draggable="false"></span>
+                    <span class="window-title-icon"><img src="vb.png" draggable="false"></span><span class="window-title-text"><img src="text-title.png" alt="시누의 싸이버스페이스" style="width: 135px; height: 13px;" draggable="false"></span>
                 </div>
                 <div class="window-content">
-                    <div class="label"><img src="text-body.png" style="width: 239px; height: 34px;" draggable="false"></div>
+                    <div class="label"><img src="text-body.png" alt="임시 랜딩 페이지: 여기에 무엇을 넣으면 좋을지 고민 중입니다." style="width: 239px; height: 34px;" draggable="false"></div>
                     <a href="/blog/" draggable="false">
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-blog.png" style="width: 76px; height: 13px;" draggable="false">
+                                <img src="text-button-blog.png" alt="시누의 블로그" style="width: 76px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
@@ -136,7 +136,7 @@
                     <div class="vspacer"></div>
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-sinutools.png" style="width: 128px; height: 13px;" draggable="false">
+                                <img src="text-button-sinutools.png" alt="시누의 잡동사니 도구들" style="width: 128px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
