--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
             .vspacer {
                 height: 4px;
             }
+            .watermark {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+            }
             a {
                 text-decoration: none;
                 color: black;
@@ -142,6 +147,9 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="watermark">
+            <img src="watermark.png" style="width: 208px; height: 60px;" draggable="false">
         </div>
         <script>
             dragElement(document.getElementById("window-test"), document.getElementById("window-title-test"))
