--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 min-height: 143px;
                 background: rgb(212, 208, 200);
                 box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+                z-index: 10;
             }
             .window-border {
                 width: 100%;
@@ -114,6 +115,7 @@
                 position: absolute;
                 bottom: 0;
                 right: 0;
+                z-index: 0;
             }
             a {
                 text-decoration: none;
