ahh caching fack

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <img src="icon.png" draggable="false">
                     </div>
                     <div class="label">
-                        <img src="text-body.png" style="width: 298px; height: 118px;" draggable="false">
+                        <img src="text-body-1.png" style="width: 298px; height: 118px;" draggable="false">
                     </div>
                     <a href="https://github.com/sinusinu" draggable="false">
                         <div class="button">
