--- a/index.html
+++ b/index.html
@@ -143,10 +143,17 @@
                 </div>
                 <div class="window-content">
                     <div class="picturebox" style="width: 64px; height: 64px;">
-                        <img src="icon.png" draggable="false">
+                        <img src="icon.png" alt="고양이 대가리" draggable="false">
                     </div>
                     <div class="label">
-                        <img src="text-body-1.png" style="width: 298px; height: 118px;" draggable="false">
+                        <img src="text-body-1.png" alt="시누 / sinusinu
+
+주력 언어 / C#, Java, Javascript
+반쯤 하는 언어 / Python, Kotlin, C++
+좋아하는 플랫폼 / Windows, Android, Crossplatform
+관심분야 / 프론트엔드/UI, 게임, 웹, LLM
+
+반가워요!" style="width: 298px; height: 118px;" draggable="false">
                     </div>
                     <a href="https://github.com/sinusinu" draggable="false">
                         <div class="button">
