Payload size reduction

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon"/>
         <title>시누의 싸이버스페이스</title>
         <style>
-            @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');            
             html {
                 margin: 0;
                 padding: 0;
@@ -152,14 +151,14 @@
         <div class="window" id="window-test">
             <div class="window-border">
                 <div class="window-title" id="window-title-test">
-                    <span class="window-title-icon"><img src="vb.png" draggable="false"></span><span class="window-title-text"><img src="text-title.png" alt="시누의 싸이버스페이스" style="width: 135px; height: 13px;" draggable="false"></span>
+                    <span class="window-title-icon"><img src="vb.webp" draggable="false"></span><span class="window-title-text"><img src="text-title.webp" alt="시누의 싸이버스페이스" style="width: 135px; height: 13px;" draggable="false"></span>
                 </div>
                 <div class="window-content">
                     <div class="picturebox" style="width: 64px; height: 64px;">
-                        <img src="icon.png" alt="고양이 대가리" draggable="false">
+                        <img src="icon.webp" alt="고양이 대가리" draggable="false">
                     </div>
                     <div class="label">
-                        <img src="text-body-1.png" alt="시누 / sinusinu
+                        <img src="text-body-1.webp" alt="시누 / sinusinu
 
 주력 언어 / C#, Java, Javascript
 반쯤 하는 언어 / Python, Kotlin, C++
@@ -171,7 +170,7 @@
                     <a href="https://github.com/sinusinu" draggable="false">
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-github.png" alt="시누의 GitHub" style="width: 77px; height: 13px;" draggable="false">
+                                <img src="text-button-github.webp" alt="시누의 GitHub" style="width: 77px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
@@ -179,7 +178,7 @@
                     <a href="/blog/" draggable="false">
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-blog.png" alt="시누의 블로그" style="width: 76px; height: 13px;" draggable="false">
+                                <img src="text-button-blog.webp" alt="시누의 블로그" style="width: 76px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
@@ -187,7 +186,7 @@
                     <div class="vspacer"></div>
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-sinutools.png" alt="시누의 잡동사니 도구들" style="width: 128px; height: 13px;" draggable="false">
+                                <img src="text-button-sinutools.webp" alt="시누의 잡동사니 도구들" style="width: 128px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
@@ -195,7 +194,7 @@
             </div>
         </div>
         <div class="watermark">
-            <img src="watermark.png" style="width: 208px; height: 60px;" draggable="false">
+            <img src="watermark.webp" style="width: 208px; height: 60px;" draggable="false">
         </div>
         <script>
             dragElement(document.getElementById("window-test"), document.getElementById("window-title-test"))
