--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
                 padding: 0;
                 height: 100%;
                 overflow: hidden;
-                background: rgba(58, 110, 165, 1) !important;
+                background: rgba(58, 110, 165, 1);
                 user-select: none;
                 font-family: "굴림", sans-serif;
                 font-size: 12px;
+            }
+            @media (prefers-color-scheme: dark) {
+                img.text-image {
+                    filter: invert();
+                }
+                body {
+                    background: #001249;
+                }
+                .window {
+                    background: rgb(19, 19, 19) !important;
+                }
             }
             img {
                 image-rendering: pixelated;
@@ -41,23 +52,23 @@
                 display: flex;
                 left: calc(50% - 158px);
                 top: calc(50% - 165px);
-                border-top: 1px solid rgb(212, 208, 200) !important;
-                border-left: 1px solid rgb(212, 208, 200) !important;
-                border-bottom: 1px solid rgb(64, 64, 64) !important;
-                border-right: 1px solid rgb(64, 64, 64) !important;
+                border-top: 1px solid rgb(212, 208, 200);
+                border-left: 1px solid rgb(212, 208, 200);
+                border-bottom: 1px solid rgb(64, 64, 64);
+                border-right: 1px solid rgb(64, 64, 64);
                 min-width: 316px;
                 min-height: 330px;
-                background: rgb(212, 208, 200) !important;
+                background: rgb(212, 208, 200);
                 box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
                 z-index: 10;
             }
             .window-border {
                 width: 100%;
                 overflow: auto;
-                border-top: 1px solid white !important;
-                border-left: 1px solid white !important;
-                border-bottom: 1px solid rgb(128, 128, 128) !important;
-                border-right: 1px solid rgb(128, 128, 128) !important;
+                border-top: 1px solid white;
+                border-left: 1px solid white;
+                border-bottom: 1px solid rgb(128, 128, 128);
+                border-right: 1px solid rgb(128, 128, 128);
 				padding: 1px;
             }
             .window-title {
@@ -65,7 +76,7 @@
                 height: 18px;
                 font-weight: bold;
                 text-align: left;
-                background: linear-gradient(90deg,rgba(10, 36, 106, 1) 0%, rgba(166, 202, 240, 1) 100%) !important;
+                background: linear-gradient(90deg,rgba(10, 36, 106, 1) 0%, rgba(166, 202, 240, 1) 100%);
             }
             .window-title-icon {
                 position:absolute;
@@ -88,42 +99,42 @@
                 flex-direction: column;
             }
             .button {
-                border-top: 1px solid rgb(212, 208, 200) !important;
-                border-left: 1px solid rgb(212, 208, 200) !important;
-                border-bottom: 1px solid rgb(64, 64, 64) !important;
-                border-right: 1px solid rgb(64, 64, 64) !important;
+                border-top: 1px solid rgb(212, 208, 200);
+                border-left: 1px solid rgb(212, 208, 200);
+                border-bottom: 1px solid rgb(64, 64, 64);
+                border-right: 1px solid rgb(64, 64, 64);
             }
             .button-border {
                 padding: 8px;
-                border-top: 1px solid white !important;
-                border-left: 1px solid white !important;
-                border-bottom: 1px solid rgb(128, 128, 128) !important;
-                border-right: 1px solid rgb(128, 128, 128) !important;
+                border-top: 1px solid white;
+                border-left: 1px solid white;
+                border-bottom: 1px solid rgb(128, 128, 128);
+                border-right: 1px solid rgb(128, 128, 128);
                 display: flex;
                 text-align: center;
                 justify-content: center;
             }
             .button:active {
-                border-bottom: 1px solid rgb(212, 208, 200) !important;
-                border-right: 1px solid rgb(212, 208, 200) !important;
-                border-top: 1px solid rgb(64, 64, 64) !important;
-                border-left: 1px solid rgb(64, 64, 64) !important;
+                border-bottom: 1px solid rgb(212, 208, 200);
+                border-right: 1px solid rgb(212, 208, 200);
+                border-top: 1px solid rgb(64, 64, 64);
+                border-left: 1px solid rgb(64, 64, 64);
             }
             .button-border:active {
-                border-bottom: 1px solid white !important;
-                border-right: 1px solid white !important;
-                border-top: 1px solid rgb(128, 128, 128) !important;
-                border-left: 1px solid rgb(128, 128, 128) !important;
+                border-bottom: 1px solid white;
+                border-right: 1px solid white;
+                border-top: 1px solid rgb(128, 128, 128);
+                border-left: 1px solid rgb(128, 128, 128);
                 padding-top: 9px;
                 padding-left: 9px;
                 padding-bottom: 7px;
                 padding-right: 7px;
             }
             .picturebox {
-                border-bottom: 2px solid white !important;
-                border-right: 2px solid white !important;
-                border-top: 2px solid rgb(128, 128, 128) !important;
-                border-left: 2px solid rgb(128, 128, 128) !important;
+                border-bottom: 2px solid white;
+                border-right: 2px solid white;
+                border-top: 2px solid rgb(128, 128, 128);
+                border-left: 2px solid rgb(128, 128, 128);
                 flex-shrink: 1;
                 margin: 0 auto;
                 padding: 0;
@@ -157,7 +168,7 @@
                         <img src="icon.webp" alt="고양이 대가리" draggable="false">
                     </div>
                     <div class="label">
-                        <img src="text-body-1.webp" alt="시누 / sinusinu
+                        <img class="text-image" src="text-body-1.webp" alt="시누 / sinusinu
 
 주력 언어 / C#, Java, Javascript
 반쯤 하는 언어 / Python, Kotlin, C++
@@ -169,7 +180,7 @@
                     <a href="https://github.com/sinusinu" draggable="false">
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-github.webp" alt="시누의 GitHub" style="width: 77px; height: 13px;" draggable="false">
+                                <img class="text-image" src="text-button-github.webp" alt="시누의 GitHub" style="width: 77px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
@@ -177,7 +188,7 @@
                     <a href="/blog/" draggable="false">
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-blog.webp" alt="시누의 블로그" style="width: 76px; height: 13px;" draggable="false">
+                                <img class="text-image" src="text-button-blog.webp" alt="시누의 블로그" style="width: 76px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
@@ -185,7 +196,7 @@
                     <div class="vspacer"></div>
                         <div class="button">
                             <div class="button-border">
-                                <img src="text-button-sinutools.webp" alt="시누의 잡동사니 도구들" style="width: 128px; height: 13px;" draggable="false">
+                                <img class="text-image" src="text-button-sinutools.webp" alt="시누의 잡동사니 도구들" style="width: 128px; height: 13px;" draggable="false">
                             </div>
                         </div>
                     </a>
