--- a/index.html
+++ b/index.html
@@ -144,9 +144,18 @@
                 text-decoration: none;
                 cursor: default;
             }
+            .disclaimer {
+                position: absolute;
+				width: 100%;
+                top: 4px;
+				text-align: center;
+            }
         </style>
     </head>
     <body>
+        <div class="disclaimer">
+            이 웹사이트는 PC에서 최적의 경험을 제공합니다.
+        </div>
         <div class="window" id="window-test">
             <div class="window-border">
                 <div class="window-title" id="window-title-test">
